# iCode

./: .gitignore  Makefile  common.cmake  common.mk
common/platform/Inc/: pltf_gpio.h
common/rfal/Inc/: rfal_nfcv.h
common/rfal/Src/: rfal_analogConfig.c  rfal_nfcDep.c  rfal_nfcv.c
common/rfal/Src/st25r3911/: st25r3911_com.c
demo/: CMakeLists.txt
demo/demo/Src/: main.c
example/iCodeDemo/: CMakeLists.txt
example/iCodeDemo/applications/iCodeDemo/Src/: exampleNFC.c
example/rfal_v1.3.0/applications/nfc_poller/Src/: exampleRfalPoller.c
example/rfal_v1.3.0/platform/Inc/: platform.h
example/rfal_v1.3.0/platform/Src/: pltf_spi.c
example/rfal_v1.3.0/rfal/Src/: rfal_analogConfig.c
iCodeDemo/applications/: CMakeLists.txt
iCodeDemo/platform/Inc/: pltf_gpio.h
iCodeDemo/rfal/: CMakeLists.txt
librfal/: CMakeLists.txt  Makefile
librfal/rfal/Src/st25r3911/: st25r3911_interrupt.c
nfc_ap2p/: CMakeLists.txt
nfc_ap2p/nfc_ap2p/Src/: main.c
nfc_ap2p_listener/: CMakeLists.txt
nfc_ap2p_listener/nfc_ap2p_listener/Src/: main.c
nfc_ap2p_send/: CMakeLists.txt
nfc_ap2p_send/nfc_ap2p_send/Src/: main.c
nfc_ap2p_sender/: CMakeLists.txt
nfc_ap2p_sender/nfc_ap2p_sender/Src/: main.c
nfc_reader/: CMakeLists.txt
nfc_reader/nfc_reader/Src/: main.c
nfc_writer/: CMakeLists.txt
nfc_writer/nfc_writer/Src/: main.c
nfc_writer/platform/Inc/: platform.h
platform/Inc/: pltf_gpio.h
rfal_v1.3.0/rfal/Src/st25r3911/: st25r3911_com.c  st25r3911_interrupt.c
